--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -248,3 +248,12 @@ a.sidebar-nav-item:focus {
 .theme-base-0f .related-posts li a:hover {
   color: #8f5536;
 }
+
+/* Green 1 Jeet */
+.theme-base-0f .sidebar {
+  background-color: #3F918E;
+}
+.theme-base-a-jeet .content a,
+.theme-base-a-jeet .related-posts li a:hover {
+  color: #3F918E;
+}
