--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -253,7 +253,7 @@ a.sidebar-nav-item:focus {
 .theme-base-0f .sidebar {
   background-color: #3F918E;
 }
-.theme-base-a-jeet .content a,
-.theme-base-a-jeet .related-posts li a:hover {
+.theme-base-0a-jeet .content a,
+.theme-base-0a-jeet .related-posts li a:hover {
   color: #3F918E;
 }
