--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -250,7 +250,7 @@ a.sidebar-nav-item:focus {
 }
 
 /* Green 1 Jeet */
-.theme-base-0f .sidebar {
+.theme-base-0a-jeet .sidebar {
   background-color: #3F918E;
 }
 .theme-base-0a-jeet .content a,
