--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -251,9 +251,9 @@ a.sidebar-nav-item:focus {
 
 /* Green 1 Jeet */
 .theme-base-0a-jeet .sidebar {
-  background-color: #297B78;
+  background-color: #1B615E;
 }
 .theme-base-0a-jeet .content a,
 .theme-base-0a-jeet .related-posts li a:hover {
-  color: #297B78;
+  color: #1B615E;
 }
