--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,8 +25,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   
   <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/website_jeet_icon.jpg">
-                                 <link rel="shortcut icon" href="{{ site.baseurl }}public/website_jeet_icon.jpg">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/website_jeet_icon.png">
+                                 <link rel="shortcut icon" href="{{ site.baseurl }}public/website_jeet_icon.png">
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
