--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,14 +17,21 @@
         `layout: page` in the front-matter. See readme for usage.
       {% endcomment %}
 
-      {% assign pages_list = site.pages %}
-      {% for node in pages_list %}
-        {% if node.title != null %}
-          {% if node.layout == "page" %}
-            <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+      {% comment %}
+        {% assign pages_list = site.pages %}
+        {% for node in pages_list %}
+          {% if node.title != null %}
+            {% if node.layout == "page" %}
+              <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
+            {% endif %}
           {% endif %}
-        {% endif %}
-      {% endfor %}
+        {% endfor %}
+      {% endcomment %}
+
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/categories">Categories</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/projects">Projects</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/about">About</a>
+      <a class="sidebar-nav-item" href="{{ site.baseurl }}/disclaimer">Legal Disclaimer</a>
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>  <-->
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>  <-->
