--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,8 @@
       <a class="sidebar-nav-item{% if page.url == '{{ site.baseurl }}/projects' %} active{% endif %}" href="{{ site.baseurl }}/projects">Projects</a>
       <a class="sidebar-nav-item{% if page.url == '{{ site.baseurl }}/about' %} active{% endif %}" href="{{ site.baseurl }}/about">About</a>
       <a class="sidebar-nav-item{% if page.url == '{{ site.baseurl }}/disclaimer' %} active{% endif %}" href="{{ site.baseurl }}/disclaimer">Legal Disclaimer</a>
+	<p> site.baseurl = {{ site.baseurl }} </p>
+	<p> page.url = {{ page.url }} </p>
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>  <-->
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>  <-->
