--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,9 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      {% comment %}
+      	<a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      {% endcomment %}
 
       {% comment %}
         The code below dynamically generates a sidebar nav of pages with
@@ -27,7 +29,8 @@
           {% endif %}
         {% endfor %}
       {% endcomment %}
-
+      
+      <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
       <a class="sidebar-nav-item{% if page.url == '/categories/' %} active{% endif %}" href="{{ site.baseurl }}/categories">Categories</a>
       <a class="sidebar-nav-item{% if page.url == '/projects/' %} active{% endif %}" href="{{ site.baseurl }}/projects">Projects</a>
       <a class="sidebar-nav-item{% if page.url == '/about/' %} active{% endif %}" href="{{ site.baseurl }}/about">About</a>
