--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,9 +6,8 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead">{{ site.description }} 
-      	<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
-      </p>
+      <p class="lead">{{ site.description }}</p>
+      <p class="lead"><a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a></p>
     </div>
 
     <nav class="sidebar-nav">
@@ -45,5 +44,6 @@
 
 
     <p>&copy; Jeet Majumdar {{ site.time | date: '%Y' }}. All rights reserved. <a style="color: rgba(255,255,255,.5);" href="{{ site.baseurl }}/disclaimer">Disclaimer.</a></p>
+    <p class="lead"><a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a></p>
   </div>
 </div>
