--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,8 +6,10 @@
           {{ site.title }}
         </a>
       </h1>
-      <p>{{ site.description }}</p>
-      <p style="text-align:center;"><a class="lead"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a></p>
+      <p class="lead">{{ site.description }}</p>
+      <div style="text-align: center">
+	      <a class="lead"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+      </div>
     </div>
 
     <nav class="sidebar-nav">
