--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,9 +7,6 @@
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
-      <div style="text-align: center">
-	      <a class="lead"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
-      </div>
     </div>
 
     <nav class="sidebar-nav">
@@ -32,7 +29,8 @@
           {% endif %}
         {% endfor %}
       {% endcomment %}
-      
+      <a class="sidebar-nav-item"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a> 
+
       <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
       <a class="sidebar-nav-item{% if page.url == '/categories/' %} active{% endif %}" href="{{ site.baseurl }}/categories">Categories</a>
       <a class="sidebar-nav-item{% if page.url == '/projects/' %} active{% endif %}" href="{{ site.baseurl }}/projects">Projects</a>
