--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,7 +34,7 @@
 
       <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
       <a class="sidebar-nav-item{% if page.url == '/categories/' %} active{% endif %}" href="{{ site.baseurl }}/categories">Categories</a>
-      <a class="sidebar-nav-item{% if page.url == '/projects/' %} active{% endif %}" href="{{ site.baseurl }}/projects">Projects</a>
+      <a class="sidebar-nav-item{% if page.url == '/publications/' %} active{% endif %}" href="{{ site.baseurl }}/projects">Publications</a>
       <a class="sidebar-nav-item{% if page.url == '/about/' %} active{% endif %}" href="{{ site.baseurl }}/about">About</a>
       <a class="sidebar-nav-item{% if page.url == '/disclaimer/' %} active{% endif %}" href="{{ site.baseurl }}/disclaimer">Legal Disclaimer</a>
 
