add social in webpage

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,26 @@
         </a>
       </h1>
       <p class="lead">{{ site.description }}</p>
+      <span class="navbar-brand social"> 
+        <a href="mailto:mail2majumdar@gmail.com"
+            title="email"><i class="fa-solid fa-envelope"></i>
+        </a> 
+        <a href="https://orcid.org/0000-0001-7291-2955"
+            title="ORCID" rel="external nofollow noopener" target="_blank"><i class="ai ai-orcid"></i>
+        </a> 
+        <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar"
+            rel="external nofollow noopener" target="_blank"><i class="ai ai-google-scholar"></i>
+        </a> 
+        <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate"
+            rel="external nofollow noopener" target="_blank"><i class="ai ai-researchgate"></i>
+        </a> 
+        <a href="https://github.com/Jeet-Majumdar" title="GitHub" rel="external nofollow noopener" target="_blank">
+            <i class="fa-brands fa-github"></i>
+        </a> 
+        <a href="https://x.com/jeetmajumdar10?lang=en" title="X" rel="external nofollow noopener" target="_blank">
+            <i class="fa-brands fa-x-twitter"></i>
+        </a> 
+    </span>
     </div>
       <p class="lead">
       	<img style="float: middle;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
