--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,15 +11,19 @@
         <a href="mailto:mail2majumdar@gmail.com" title="email">
           <i class="fa-solid fa-envelope"></i>
         </a> 
+        <a href="https://www.linkedin.com/in/jeet-majumdar-india/" title="LinkedIn" rel="external nofollow noopener" target="_blank">
+          <i class="fa-brands fa-linkedin"></i>"></i>
+        </a> 
         <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
           <i class="ai ai-orcid"></i>
         </a> 
-        <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
+        <!-- <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
             <i class="ai ai-google-scholar"></i>
         </a> 
         <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate" rel="external nofollow noopener" target="_blank">
           <i class="ai ai-researchgate"></i>
-        </a> 
+        </a>  -->
+        
         <a href="https://github.com/Jeet-Majumdar" title="GitHub" rel="external nofollow noopener" target="_blank">
             <i class="fa-brands fa-github"></i>
         </a> 
