--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
           <i class="fa-solid fa-envelope"></i>
         </a> 
         <a href="https://www.linkedin.com/in/jeet-majumdar-india/" title="LinkedIn" rel="external nofollow noopener" target="_blank">
-          <i class="fa-brands fa-linkedin"></i>"></i>
+          <i class="fa-brands fa-linkedin"></i>
         </a> 
         <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
           <i class="ai ai-orcid"></i>
