--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,9 +30,9 @@
         <a href="https://x.com/jeetmajumdar10?lang=en" title="X" rel="external nofollow noopener" target="_blank">
             <i class="fa-brands fa-x-twitter"></i>
         </a> 
-        <p class="lead">
+        <span class="lead">
           <img style="float: middle;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
-        </p>
+        </span>
     </span>
     </div>      
     <nav class="sidebar-nav">
