publications back to project

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,9 +30,6 @@
         <a href="https://x.com/jeetmajumdar10?lang=en" title="X" rel="external nofollow noopener" target="_blank">
             <i class="fa-brands fa-x-twitter"></i>
         </a> 
-        <span class="lead">
-          <img style="float: middle;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
-        </span>
     </span>
     </div>      
     <nav class="sidebar-nav">
@@ -58,13 +55,16 @@
 
       <a class="sidebar-nav-item{% if page.url == '/' %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
       <a class="sidebar-nav-item{% if page.url == '/categories/' %} active{% endif %}" href="{{ site.baseurl }}/categories">Categories</a>
-      <a class="sidebar-nav-item{% if page.url == '/publications/' %} active{% endif %}" href="{{ site.baseurl }}/projects">Publications</a>
+      <a class="sidebar-nav-item{% if page.url == '/projects/' %} active{% endif %}" href="{{ site.baseurl }}/projects">Projects</a>
       <a class="sidebar-nav-item{% if page.url == '/about/' %} active{% endif %}" href="{{ site.baseurl }}/about">About</a>
       <a class="sidebar-nav-item{% if page.url == '/disclaimer/' %} active{% endif %}" href="{{ site.baseurl }}/disclaimer">Legal Disclaimer</a>
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>  <-->
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>  <-->
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+      <span class="lead">
+        <img style="float: middle;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
+      </span>
     </nav>
 
 
