add clust map and update publications

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=SMeZPWmk9vQrYqd_GhUZJP75XnXGIZXrechRFOqnOcE"></script>
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
@@ -14,9 +15,9 @@
         <a href="https://www.linkedin.com/in/jeet-majumdar-india/" title="LinkedIn" rel="external nofollow noopener" target="_blank">
           <i class="fa-brands fa-linkedin"></i>
         </a> 
-        <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
+        <!-- <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
           <i class="ai ai-orcid"></i>
-        </a> 
+        </a>  -->
         <!-- <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
             <i class="ai ai-google-scholar"></i>
         </a> 
