--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+      div
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
@@ -16,8 +17,8 @@
         </a> 
         <!-- <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
           <i class="ai ai-orcid"></i>
-        </a>  -->
-        <!-- <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
+        </a> 
+        <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
             <i class="ai ai-google-scholar"></i>
         </a> 
         <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate" rel="external nofollow noopener" target="_blank">
