--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,12 +61,13 @@
 
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>  <-->
       <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>  <-->
-      <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
-      <span class="lead">
-        <img style="float: middle;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
-      </span>
+      
     </nav>
 
+    <p class="sidebar-nav-item">Currently v{{ site.version }}</p>
+    <p class="lead">
+        <img style="float: middle;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
+    </p>
 
     <p>&copy; Jeet Majumdar {{ site.time | date: '%Y' }}. All rights reserved. <a style="color: rgba(255,255,255,.5);" href="{{ site.baseurl }}/disclaimer">Disclaimer.</a></p>
   </div>
