--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -67,7 +67,7 @@
     <p class="sidebar-nav-item">Currently v{{ site.version }}</p>
     <p>&copy; Jeet Majumdar {{ site.time | date: '%Y' }}. All rights reserved. <a style="color: rgba(255,255,255,.5);" href="{{ site.baseurl }}/disclaimer">Disclaimer.</a></p>
 
-    <div class="lead">
+    <div class="lead" style="align-items: center;">
       <img style="float: middle;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
     </div>
   </div>
