--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
         processHtmlClass: 'tex2jax_process'
       },
       loader: {
-        load: ['[tex]/noerrors']
+        load: ['[tex]/noerrors', 'output/svg', 'ui/safe']
       }
     };
     </script>
