--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,7 @@
         },
         packages: {'[+]': ['noerrors']}
       },
+      svg: {fontCache: 'global'},
       options: {
         ignoreHtmlClass: 'tex2jax_ignore',
         processHtmlClass: 'tex2jax_process'
