--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,7 +47,6 @@
         },
         packages: {'[+]': ['noerrors']}
       },
-      svg: {fontCache: 'global'},
       options: {
         ignoreHtmlClass: 'tex2jax_ignore',
         processHtmlClass: 'tex2jax_process'
@@ -57,6 +56,6 @@
       }
     };
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" id="MathJax-script"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/startup.js" id="MathJax-script"></script>
 
 </head>
