--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,7 +52,7 @@
         processHtmlClass: 'tex2jax_process'
       },
       loader: {
-        load: ['[tex]/noerrors', 'input/tex', 'ui/safe', 'output/svg', 'output/chtml', 'output/mml']
+        load: ['[tex]/noerrors', 'input/tex', 'ui/safe', 'output/svg', 'output/chtml']
       }
     };
     </script>
